fix overflow aos

--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@
 
 body {
     font-family: 'Lato', sans-serif;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
+}
+
+.overf {
+    overflow-x: hidden !important;
+
 }
 
 main {
